--- a/src/PhotoBooth.css
+++ b/src/PhotoBooth.css
@@ -12,7 +12,7 @@ body {
 background-image: linear-gradient(315deg, #fe7bb0 0%, #ff748b 74%);
 } */
 
-/* Photo Booth Main Container */
+/* MAIN CONTAINER */
 .photobooth-container {
     display: flex;
     flex-direction: column;
@@ -205,7 +205,8 @@ background-image: linear-gradient(315deg, #fe7bb0 0%, #ff748b 74%);
 
 .strip-title {
     color: #343a40;
-    margin-bottom: 20px;
+    margin-top: 10px;
+    margin-bottom: 10px;
     text-align: center;
     font-family: 'Pacifico', cursive;
     font-size: 1.8rem;
@@ -223,7 +224,7 @@ background-image: linear-gradient(315deg, #fe7bb0 0%, #ff748b 74%);
 .strip-image {
     width: 100%;
     height: auto;
-    max-height: 600px; /* Increased to show full strip */
+    max-height: 1000px; /* Increased to show full strip */
     object-fit: contain;
     border: 8px solid white;
     box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
@@ -235,6 +236,7 @@ background-image: linear-gradient(315deg, #fe7bb0 0%, #ff748b 74%);
     padding: 10px;
     text-align: center;
     width: 100%;
+    margin-bottom: -20px;
 }
 
 .strip-label {
