--- a/src/PhotoBooth.css
+++ b/src/PhotoBooth.css
@@ -294,6 +294,55 @@ background-image: linear-gradient(315deg, #fe7bb0 0%, #ff748b 74%);
     display: none;
 }
 
+.modal-overlay {
+    position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    color: black;
+    font-size: 24px;
+}
+
+.modal {
+    background: white;
+    padding: 20px;
+    border-radius: 10px;
+    text-align: center;
+    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.2);
+}
+.modal button {
+    margin: 10px;
+    padding: 10px 20px;
+    border: none;
+    background: rgb(11, 149, 11);
+    color: white;
+    font-size: 16px;
+    border-radius: 5px;
+    cursor: pointer;
+    transition: background 0.3s ease, transform 0.2s ease;
+}
+
+.modal button:hover {
+    background: green;
+    transform: scale(1.05);
+}
+
+.modal button:nth-child(4) {
+    background-color: #dc3545;
+}
+
+.modal button:nth-child(4):hover {
+    background-color: #c82333;
+    transform: scale(1.05);
+}
+
+
+
 /* Responsive design */
 @media (max-width: 768px) {
     .photobooth-panel {
