--- a/src/PhotoBooth.css
+++ b/src/PhotoBooth.css
@@ -54,6 +54,7 @@ background-image: linear-gradient(315deg, #fe7bb0 0%, #ff748b 74%);
 
 .video-container {
     position: relative;
+    display: inline-block;
     width: 100%;
     margin-bottom: 20px;
     border-radius: 8px;
@@ -65,6 +66,7 @@ background-image: linear-gradient(315deg, #fe7bb0 0%, #ff748b 74%);
     width: 100%;
     height: auto;
     display: block;
+    transform: scaleX(-1);
 }
 
 /* Flash effect */
@@ -78,6 +80,7 @@ background-image: linear-gradient(315deg, #fe7bb0 0%, #ff748b 74%);
     background-color: white;
     opacity: 0.8;
     animation: flash 300ms ease-out;
+    z-index: 10;
     pointer-events: none;
 }
 
